setup main page layout, integrated scroll feed and recent activity and friend and public playlists

--- a/angular.json
+++ b/angular.json
@@ -122,5 +122,8 @@
       }
     }
   },
-  "defaultProject": "music-social-media"
+  "defaultProject": "music-social-media",
+  "cli": {
+    "analytics": false
+  }
 }
